style.css
*
{
font-family: sans-serif;
}

html, body {
    margin: 0;
    height: 100%;
	min-height: 100vh;
}

.box
{
	position: relative;
	text-align: center;	
    right: 0;
    left: 0;
    margin-right: auto;
    margin-left: auto;
    min-height: 10em;
    width: 60%;	
    top: 10em;
	padding: 70px 0;
	overflow: clip;
}

button
{		
		position: relative;
		top: 9em;
		width: 7rem;
		right: 0;		
		margin-right: auto;
		margin-left: auto;		
		height: 3.5rem;
		background-color: white;
		border-style:none;
		border: 1px #C4C4C4 ;		
		-webkit-transition-duration: 0.5s;
		webkit-appearance: none;
		border-radius: 4px;
		margin: 14px 54px 0px 4px;
		padding: 5px 5px 5px 5px;
		font-size: 15px;
		z-index:10;
}

button:hover
{
	border: 1px solid #C4C4C0;
	background-color: #e1e1e1;
}



.buttonsBox
{
	position: relative;
	bottom: 1em;
	z-index:2;
	margin-left: auto;
	margin-right: auto;
	text-align: center;
}

.outerDiv
{
	min-height: 75vh;	
	text-align: center;	
	grid-template-rows: 20% 20% 20% 20% 20%;
	 grid-template-columns: 25% 25% 25% 25%;	
	 z-index: -2;
	 /*overflow: clip;*/
	 -webkit-flex-shrink: 3; 
}

.logo
{
		top: 0px;
		left: 0px;
		width:6%; /* you can use % */
		height: auto;
		
}

#colorBox
{	
	color: white;
	position: float center;	
	text-align: center;
	display: inline-block;
	vertical-align: middle;
	line-height: 200px;
	font-weight: 900;
	text-shadow: 0px 5px 5px gray;
	font-size: 2em;
	display:block; 	
	margin-bottom:1px;
	 top: 2em;
	width: 50%;
	max-height: 30%;
	white-space: nowrap;
	overflow: clip;
}


#compareBox
{
	position:absolute;	
	top: 0px;
	right: 0px;
	height: 100%;
	width: 50%;
	z-index: 1;	
	overflow: hide;
}

.slidersBox
{    	
	border-radius: 4px;
	position: relative;	
	text-align: center;		
	float:left; 
	top: 7em;
	display:block; 
	width: 99%;				
	height: 10%;
	
}

#slidersContainer
{	
	display: block;
	position: absolute;
	width: 100%; /* Full-width */	
    height: 40%; /* Specified height */
	text-align: center;	
	margin: 10px;	
	overflow: visible;	
}

.slider {

	position: relative;
	text-align:center;
	margin-left: auto;
	margin-right: auto;	
	display: inline-block;	
	*display: inline;
	-webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    width: 35%; /* Full-width */
    height: 70%; /* Specified height */
    outline: solid #C4C4C4 1px; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .5s; /* 0.2 seconds transition on hover */
    transition: opacity .5s;
	margin: 0em 10em 2em 10em;
	z-index:10;
}

.sliders{
	display:inline-block;
}

/* Mouse-over effects */
.slider:hover {
    opacity: 1; /* Fully shown on mouse-over */	
}

/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */ 
#redSlider::-webkit-slider-thumb {
	border-radius: 4px;	
    -webkit-appearance: none; /* Override default look */
    appearance: none;
    width: 5vh; /* Set a specific slider handle width */
    height: 4.5vh; /* Slider handle height */    	
	background: red;     
	opacity: .75;

}

#greenSlider::-webkit-slider-thumb {
	border-radius: 4px;	
    -webkit-appearance: none; /* Override default look */
    appearance: none;
    width: 5vh; /* Set a specific slider handle width */
    height: 4.5vh; /* Slider handle height */    	
	opacity: .75;
	background: green;     
}
#blueSlider::-webkit-slider-thumb {
	border-radius: 4px;	
	background-image: linear-gradient(90deg, transparent 50%, rgba(255,255,255,.5) 50%);
    -webkit-appearance: none; /* Override default look */
    appearance: none;	
    width: 5vh; /* Set a specific slider handle width */
    height: 4.5vh; /* Slider handle height */    	
	opacity: .75;
	background: blue;     
}

.slider::-moz-range-thumb {
    width: 45px; /* Set a specific slider handle width */
    height: 25px; /* Slider handle height */        
}


#disclaimerText{
	text-align: center;
	font-size: 10px;
	color: grey;
	bottom: 2px;
	position: absolute;
	left: 0px;
	width: 100%
}

@media only screen and (max-width: 500px) {
	body{		
		overflow: hidden;
		height: 100%;
	}
	button{
		width: 5rem;
		background-color: #e6e6e6;
		border: 2px solid #dbdbdb;
	}
		.slidersBox{
			bottom: 25%;
			position: absolute;
			padding-bottom:20%;
			width: 100%;
			left: 2%;
		}
		.buttonsBox{
			position: absolute;
			bottom: 23%;
			width: 100%;
			left: 5%;
		}
		#slidersContainer{
			left: -50px;
			bottom: -195px;
			position: absolute;
		}
		.box{
			min-height: 4em;
		}
		#colorBox{
			line-height: 125px;
		}
		#compareBox{
			font-size: 13px;
		}
}	

